--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -63,6 +63,19 @@
     <string name="summary_animation_no_override">Prevent apps from overriding transitions</string>
     <string name="animation_duration_default">Default</string>
 
+    <!-- Tiles animation style  -->
+    <string name="qs_tile_animation_category">QS tiles animations</string>
+    <string name="qs_tile_animation_style_title">QS tiles animation style</string>
+    <string name="qs_tile_animation_duration_title">QS tiles animation duration</string>
+    <string name="qs_tile_animation_style_off">no animation</string>
+    <string name="qs_tile_animation_style_flip">flip</string>
+    <string name="qs_tile_animation_style_rotate">rotate</string>
+    <string name="qs_tile_animation_duration_low">low</string>
+    <string name="qs_tile_animation_duration_default">default</string>
+    <string name="qs_tile_animation_duration_fast">fast</string>
+    <string name="qs_set_animation_style">Animation is set to %1$s</string>
+    <string name="qs_set_animation_duration">Animation duration is set to %1$s</string>
+    
     <!-- Categories -->
     <string name="animations_title">Animations</string>
     <string name="buttons_title">Buttons</string>
@@ -128,6 +141,7 @@
     <string name="tile_animation_title" >Tile Animation</string>
     <string name="list_animation_title" >ListView Animation</string>
     <string name="system_keyguard_animation_title" >System and Keyguard Animation</string>
+    <string name="animation_duration_custom">Custom</string>
 
     <!-- Toast Animation -->
     <string name="toast_animation_title">Toast animation</string>
