--- a/res/xml/power_menu.xml
+++ b/res/xml/power_menu.xml
@@ -19,24 +19,21 @@
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
     <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-       android:key="powermenu_power"
-       android:title="@string/powermenu_power"
-       android:defaultValue="true" />
+        android:key="powermenu_reboot"
+        android:title="@string/powermenu_reboot_title"
+        android:defaultValue="true" />
 
     <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-       android:key="powermenu_restart"
-       android:title="@string/powermenu_restart"
-       android:defaultValue="true" />
+        android:key="powermenu_advanced_reboot"
+        android:title="@string/powermenu_advanced_reboot_title"
+        android:summary="@string/powermenu_advanced_reboot_summary"
+        android:dependency="powermenu_reboot"
+        android:defaultValue="false" />
 
     <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-       android:key="powermenu_restart_recovery"
-       android:title="@string/powermenu_restart_recovery"
-       android:defaultValue="true" />
-
-    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-       android:key="powermenu_screenshot"
-       android:title="@string/powermenu_screenshot"
-       android:defaultValue="false" />
+        android:key="powermenu_screenshot"
+        android:title="@string/powermenu_screenshot_title"
+        android:defaultValue="false" />
 
     <SwitchPreference
         android:key="powermenu_torch"
@@ -44,28 +41,47 @@
         android:persistent="false" />
 
     <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-       android:key="powermenu_airplane"
-       android:title="@string/powermenu_airplane"
-       android:defaultValue="false" />
+        android:key="powermenu_airplane"
+        android:title="@string/powermenu_airplane_title"
+        android:defaultValue="false" />
 
-    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-       android:key="powermenu_settings"
-       android:title="@string/powermenu_settings"
-       android:defaultValue="false" />
+    <PreferenceCategory
+        android:key="powermenu_category_visibility"
+        android:title="@string/powermenu_category_visibility">
 
-    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-       android:key="powermenu_lockdown"
-       android:title="@string/powermenu_lockdown"
-       android:defaultValue="false" />
+        <SwitchPreference
+            android:key="powermenu_lockscreen"
+            android:title="@string/powermenu_lockscreen_title"
+            android:summary="@string/powermenu_lockscreen_summary"
+            android:defaultValue="true" />
 
-    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-       android:key="powermenu_users"
-       android:title="@string/powermenu_users"
-       android:defaultValue="false" />
+        <SwitchPreference
+            android:key="powermenu_ls_reboot"
+            android:title="@string/powermenu_reboot_title"
+            android:summary="@string/powermenu_ls_reboot_summary"
+            android:dependency="powermenu_reboot"
+            android:defaultValue="true" />
 
-    <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-       android:key="powermenu_logout"
-       android:title="@string/powermenu_logout"
-       android:defaultValue="false" />
+        <SwitchPreference
+            android:key="powermenu_ls_advanced_reboot"
+            android:title="@string/powermenu_advanced_reboot_title"
+            android:summary="@string/powermenu_ls_advanced_reboot_summary"
+            android:dependency="powermenu_advanced_reboot"
+            android:defaultValue="false" />
 
+        <SwitchPreference
+            android:key="powermenu_ls_screenshot"
+            android:title="@string/powermenu_screenshot_title"
+            android:summary="@string/powermenu_ls_screenshot_summary"
+            android:dependency="powermenu_screenshot"
+            android:defaultValue="false" />
+
+        <SwitchPreference
+            android:key="powermenu_ls_airplane"
+            android:title="@string/powermenu_airplane_title"
+            android:summary="@string/powermenu_ls_airplane_summary"
+            android:dependency="powermenu_airplane"
+            android:defaultValue="false" />
+
+    </PreferenceCategory>
 </PreferenceScreen>
