--- a/res/xml/ion_settings_quicksettings.xml
+++ b/res/xml/ion_settings_quicksettings.xml
@@ -38,6 +38,42 @@
             android:defaultValue="true" />
 
         <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+            android:key="qs_rows_portrait"
+            android:title="@string/qs_rows_portrait_title"
+            android:max="7"
+            android:min="1"
+            settings:units=""
+            android:defaultValue="3"
+            android:persistent="false" />
+
+        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+            android:key="qs_rows_landscape"
+            android:title="@string/qs_rows_landscape_title"
+            android:max="3"
+            android:min="1"
+            settings:units=""
+            android:defaultValue="2"
+            android:persistent="false" />
+
+        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+            android:key="qs_columns_portrait"
+            android:title="@string/qs_columns_portrait_title"
+            android:max="10"
+            android:min="1"
+            settings:units=""
+            android:defaultValue="3"
+            android:persistent="false" />
+
+        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+            android:key="qs_columns_landscape"
+            android:title="@string/qs_columns_landscape_title"
+            android:max="10"
+            android:min="1"
+            settings:units=""
+            android:defaultValue="5"
+            android:persistent="false" />
+			
+        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
             android:key="sysui_qqs_count"
             android:title="@string/sysui_qqs_count_title"
             android:max="8"
