--- a/res/values/ion_arrays.xml
+++ b/res/values/ion_arrays.xml
@@ -147,4 +147,19 @@
         <item>@string/action_value_custom_action</item>
         <item>@string/action_value_select_app</item>
     </string-array>
+
+    <!-- Screen off animation -->
+    <string-array name="screen_off_animation_entries">
+        <item>@string/screen_off_animation_color</item>
+        <item>@string/screen_off_animation_crt</item>
+        <item>@string/screen_off_animation_scale</item>
+        <item>@string/screen_off_animation_fade</item>
+    </string-array>
+
+    <string-array name="screen_off_animation_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
 </resources>
