--- a/res/xml/ion_settings_buttons.xml
+++ b/res/xml/ion_settings_buttons.xml
@@ -35,6 +35,12 @@
             android:key="volume_key_cursor_control"
             android:title="@string/volume_key_cursor_control_title"/>
 
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="swap_volume_buttons"
+            android:title="@string/swap_volume_buttons_title"
+            android:summary="@string/swap_volume_buttons_summary"
+            android:defaultValue="false" />
+
         <Preference
             android:key="volume_steps"
             android:title="@string/volume_steps_title"
