--- a/res/xml/ion_settings_statusbar.xml
+++ b/res/xml/ion_settings_statusbar.xml
@@ -50,18 +50,11 @@
             android:min="0"
             settings:units="" />
 
-        <com.ion.ionizer.preferences.SystemSettingListPreference
-            android:key="status_bar_show_carrier"
-            android:title="@string/show_carrier_title"
-            android:dialogTitle="@string/show_carrier_title"
-            android:entries="@array/carrier_label_entries"
-            android:entryValues="@array/carrier_label_values"
-            android:summary="%s"
-            android:defaultValue="1" />
-
-        <PreferenceScreen
-            android:key="custom_carrier_label"
-            android:title="@string/custom_carrier_label_title" />
+        <Preference
+            android:key="carrierlabel_settings"
+            android:title="@string/carrier_label_category_title"
+            android:summary="@string/carrier_label_category_summary"
+            android:fragment="com.ion.ionizer.fragments.CarrierLabelSettings" />
 
         <ListPreference
             android:key="status_bar_battery_style"
