--- a/res/xml/ion_settings_system.xml
+++ b/res/xml/ion_settings_system.xml
@@ -16,6 +16,7 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:title="@string/system_title"
+    xmlns:ionionizer="http://schemas.android.com/apk/res-auto"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     settings:initialExpandedChildrenCount="4" >
 
@@ -100,6 +101,27 @@
             android:title="@string/wakelock_blocker_title"
             android:summary="@string/wakelock_blocker_summary"
             android:fragment="com.ion.ionizer.fragments.WakeLockBlocker" />
+    </PreferenceCategory>
+
+    <PreferenceCategory
+        android:key="navigation_burnin"
+        android:title="@string/navigation_burnin_category" >
+
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="burn_in_protection"
+            android:title="@string/burn_in_protection_title"
+            android:summary="@string/burn_in_protection_summary"
+            android:defaultValue="false" />
+
+        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+            android:key="burn_in_protection_interval"
+            android:title="@string/burn_in_protection_interval_title"
+            android:defaultValue="60"
+            android:max="90"
+            android:min="45"
+            ionionizer:units="sec"
+            android:dependency="burn_in_protection"
+            android:persistent="false" />
     </PreferenceCategory>
 
     <PreferenceCategory
