--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -137,6 +137,7 @@
     <!-- Power Menu -->
     <string name="powermenu_title">Power Menu</string>
     <string name="powermenu_torch">Flashlight</string>
+    <string name="powermenu_lockdown">Lockdown</string>
     <string name="advanced_power_menu">Power menu options</string>
     <string name="arrow_reboot_menu">Advanced reboot menu</string>
     <string name="powermenu_reboot_title">Reboot</string>
