--- a/res/xml/ion_settings_statusbar.xml
+++ b/res/xml/ion_settings_statusbar.xml
@@ -55,7 +55,7 @@
             android:title="@string/network_traffic_autohide_threshold_title"
             android:max="10"
             android:min="0"
-            settings:units="" />
+            android:defaultValue="1" />
 
         <Preference
             android:key="carrierlabel_settings"
