--- a/res/xml/statusbar_clock_settings.xml
+++ b/res/xml/statusbar_clock_settings.xml
@@ -64,6 +64,12 @@
         android:entryValues="@array/lock_clock_fonts_values"
         android:defaultValue="0" />
 
+    <net.margaritov.preference.colorpicker.ColorPickerPreference
+        android:key="status_bar_clock_color"
+        android:title="@string/status_bar_clock_color_title"
+        android:defaultValue="0xffffffff"
+        android:dependency="status_bar_clock" />
+
     </PreferenceCategory>
 
     <PreferenceCategory
