--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -519,8 +519,11 @@
     <!-- QS tile styles -->
     <string name="qs_tile_style_title">QS Tile Style</string>
     <string name="qstile_default">Default</string>
-    <string name="qstile_circle_trim">Circle with trim</string>
-    <string name="qstile_dual_tone_circle">Dual-toned circle</string>
-    <string name="qstile_squircle_trim">Squircle with trim</string>
+    <string name="qstile_circle_trim">Circle (Trim)</string>
+    <string name="qstile_dual_tone_circle">Dual-Toned Circle (Trim)</string>
+    <string name="qstile_oreo">Oreo</string>
+    <string name="qstile_oreo_circle_trim">Oreo (Circle Trim)</string>
+    <string name="qstile_oreo_squircle_trim">Oreo (Squircle Trim)</string>
+    <string name="qstile_squircle_trim">Squircle (Trim)</string>
 
 </resources>
