--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -390,9 +390,10 @@
     <string name="enable_navbar_summary">Controls whether the navigation bar is displayed</string>
 
     <!-- Statusbar Clock -->
-    <string name="status_bar_clock_title">Clock settings</string>
-    <string name="status_bar_clock_show">Show clock and date</string>
-    <string name="status_bar_clock_style_title">Clock style</string>
+    <string name="status_bar_clock_title">Clock Settings</string>
+    <string name="status_bar_clock_summary">Customize clock and date in statusbar</string>
+    <string name="status_bar_clock_show">Clock</string>
+    <string name="status_bar_clock_style_title">Clock Position</string>
     <string name="status_bar_clock_style_right">Right</string>
     <string name="status_bar_clock_style_center">Center</string>
     <string name="status_bar_clock_style_left">Left</string>
@@ -418,6 +419,8 @@
     <string name="clock_date_right">Right of time</string>
     <string name="clock_date_left">Left of time</string>
     <string name="clock_date_position">Date position</string>
+    <string name="show_qs_clock_title">Clock</string>
+    <string name="show_qs_clock_summary">Show Clock in QS</string>
 
     <!-- Statusbar Clock Font Style & Size -->
     <string name="status_bar_clock_font_style_title">Clock font style</string>
@@ -427,7 +430,7 @@
     <string name="lock_clock_font_title">Clock font options</string>
     <string name="lock_clock_font_summary">Change the default font of the lockscreen clock widget</string>
     <string name="lock_clock_font_dialog_title">Select lock clock font</string>
-    <string name="lock_clock_font_stock">Normal (default)</string>
+    <string name="lock_clock_font_stock">Normal</string>
     <string name="lock_clock_font_bold">Bold</string>
     <string name="lock_clock_font_italic">Italic</string>
     <string name="lock_clock_font_bold_italic">Bold Italic</string>
@@ -441,7 +444,7 @@
     <string name="lock_clock_font_condensed_bold_italic">Condensed Bold Italic</string>
     <string name="lock_clock_font_condensed_light">Condensed Light</string>
     <string name="lock_clock_font_condensed_light_italic">Condensed Light Italic</string>
-    <string name="lock_clock_font_medium_normal">Medium</string>
+    <string name="lock_clock_font_medium_normal">Medium (default)</string>
     <string name="lock_clock_font_medium_italic">Medium Italic</string>
     <string name="lock_clock_font_black">Black</string>
     <string name="lock_clock_font_black_italic">Black Italic</string>
