--- a/res/xml/ion_settings_quicksettings.xml
+++ b/res/xml/ion_settings_quicksettings.xml
@@ -84,6 +84,12 @@
         android:key="quick_header"
         android:title="@string/quick_header_title">
 
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="show_qs_clock"
+            android:title="@string/show_qs_clock_title"
+            android:summary="@string/show_qs_clock_summary"
+            android:defaultValue="true" />
+
         <com.ion.ionizer.preferences.SecureSettingSwitchPreference
             android:key="qs_battery_location_bar"
             android:title="@string/qs_battery_location_bar"
