--- a/res/xml/ion_settings_statusbar.xml
+++ b/res/xml/ion_settings_statusbar.xml
@@ -18,6 +18,12 @@
     android:title="@string/statusbar_title"
     xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
 
+    <com.ion.ionizer.preferences.SystemSettingMasterSwitchPreference
+        android:key="status_bar_clock"
+        android:fragment="com.ion.ionizer.fragments.ClockSettings"
+        android:title="@string/status_bar_clock_show"
+        android:summary="@string/status_bar_clock_summary" />
+
     <Preference
         android:key="traffic_category"
         android:title="@string/trafficat"
@@ -59,78 +65,4 @@
             android:entryValues="@array/quick_pulldown_values"
             android:persistent="false" />
     </PreferenceCategory>
-
-    <PreferenceCategory
-        android:title="@string/status_bar_clock_title"/>
-
-        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-            android:key="status_bar_clock"
-            android:title="@string/status_bar_clock_show"
-            android:defaultValue="true" />
-
-        <ListPreference
-            android:key="statusbar_clock_style"
-            android:title="@string/status_bar_clock_style_title"
-            android:dialogTitle="@string/status_bar_clock_style_title"
-            android:entries="@array/status_bar_clock_style_entries"
-            android:entryValues="@array/status_bar_clock_style_values"
-            android:dependency="status_bar_clock" />
-
-        <ListPreference
-            android:key="status_bar_am_pm"
-            android:title="@string/status_bar_am_pm_title"
-            android:dialogTitle="@string/status_bar_am_pm_title"
-            android:entries="@array/status_bar_am_pm_entries"
-            android:entryValues="@array/status_bar_am_pm_values"
-            android:dependency="status_bar_clock" />
-
-        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-            android:key="status_bar_clock_seconds"
-            android:title="@string/clock_seconds_display"
-            android:dependency="status_bar_clock"
-            android:defaultValue="false" />
-
-        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
-            android:key="status_bar_clock_size"
-            android:title="@string/status_bar_clock_font_size_title"
-            android:max="23"
-            settings:min="4"
-            android:defaultValue="14"
-            settings:units="dp"
-            android:dependency="status_bar_clock" />
-
-        <ListPreference
-            android:key="status_bar_clock_font_style"
-            android:dialogTitle="@string/status_bar_clock_font_style_title"
-            android:title="@string/status_bar_clock_font_style_title"
-            android:entries="@array/lock_clock_fonts_entries"
-            android:entryValues="@array/lock_clock_fonts_values"
-            android:defaultValue="0"
-            android:dependency="status_bar_clock" />
-
-        <ListPreference
-            android:key="clock_date_display"
-            android:title="@string/clock_date_display"
-            android:summary="@string/clock_date_display_summary"
-            android:entries="@array/clock_date_display_entries"
-            android:entryValues="@array/clock_date_display_values"
-            android:dependency="status_bar_clock" />
-
-        <ListPreference
-            android:key="clock_date_style"
-            android:title="@string/clock_date_style"
-            android:entries="@array/clock_date_style_entries"
-            android:entryValues="@array/clock_date_style_values" />
-
-        <ListPreference
-            android:key="clock_date_format"
-            android:title="@string/clock_date_format"
-            android:entries="@array/clock_date_format_entries_values"
-            android:entryValues="@array/clock_date_format_entries_values" />
-
-        <ListPreference
-            android:key="statusbar_clock_date_position"
-            android:title="@string/clock_date_position"
-            android:entries="@array/clock_date_position_entries"
-            android:entryValues="@array/clock_date_position_values" />
 </PreferenceScreen>
