--- a/res/xml/ion_settings_animations.xml
+++ b/res/xml/ion_settings_animations.xml
@@ -84,4 +84,24 @@
         settings:allowDividerAbove="true"
         android:persistent="false"
         android:defaultValue="0" />
+
+    <PreferenceCategory
+        android:title="@string/qs_tile_animation_category">
+
+        <ListPreference
+            android:key="qs_tile_animation_style"
+            android:title="@string/qs_tile_animation_style_title"
+            android:entries="@array/qs_tile_animation_style_entries"
+            android:entryValues="@array/qs_tile_animation_style_values"
+            android:defaultValue="0"
+            android:persistent="false" />
+
+        <ListPreference
+            android:key="qs_tile_animation_duration"
+            android:title="@string/qs_tile_animation_duration_title"
+            android:entries="@array/qs_tile_animation_duration_entries"
+            android:entryValues="@array/qs_tile_animation_duration_values"
+            android:defaultValue="2000"
+            android:persistent="false" />
+    </PreferenceCategory>
 </PreferenceScreen>
