--- a/res/values/ion_arrays.xml
+++ b/res/values/ion_arrays.xml
@@ -536,6 +536,7 @@
         <item>@string/battery_percentage_next</item>
         <item>@string/battery_percentage_inside</item>
         <item>@string/battery_percentage_estimate</item>
+        <item>@string/battery_percentage_percentage_estimate</item>
     </string-array>
 
     <string-array name="qs_battery_mode_values" translatable="false">
@@ -543,5 +544,6 @@
         <item>1</item>
         <item>2</item>
         <item>3</item>
+        <item>4</item>
     </string-array>
 </resources>
