--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -575,4 +575,5 @@
     <string name="battery_percentage_next">Enabled</string>
     <string name="battery_percentage_inside">Enabled (inside icon)</string>
     <string name="battery_percentage_estimate">Enabled (estimate)</string>
+    <string name="battery_percentage_percentage_estimate">Enabled (percent | estimate)</string>
 </resources>
