--- a/res/xml/ion_settings_statusbar.xml
+++ b/res/xml/ion_settings_statusbar.xml
@@ -51,6 +51,15 @@
             android:entryValues="@array/battery_percent_values"
             android:defaultValue="0" />
 
+        <com.ion.ionizer.preferences.SystemSettingListPreference
+            android:key="text_charging_symbol"
+            android:title="@string/text_charging_symbol_title"
+            android:dialogTitle="@string/text_charging_symbol_dialog"
+            android:entries="@array/text_charging_symbol_entries"
+            android:entryValues="@array/text_charging_symbol_values"
+            android:summary="%s"
+            android:defaultValue="0" />
+
        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
             android:key="status_bar_battery_text_charging"
             android:title="@string/status_bar_battery_text_charging_title"
