--- a/res/values/ion_arrays.xml
+++ b/res/values/ion_arrays.xml
@@ -49,6 +49,7 @@
     <!-- Network Traffic Type -->
     <string-array name="show_network_traffic_type_entries" translatable="false">
         <item>@string/show_network_traffic_combined</item>
+        <item>@string/show_network_traffic_dynamic</item>
         <item>@string/show_network_traffic_up</item>
         <item>@string/show_network_traffic_down</item>
         <item>@string/show_network_traffic_all</item>
@@ -56,6 +57,7 @@
 
     <string-array name="show_network_traffic_type_values" translatable="false">
         <item>3</item>
+        <item>4</item>
         <item>1</item>
         <item>2</item>
         <item>0</item>
