--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -141,6 +141,7 @@
     <string name="network_traffic_hidearrow_summary">Show the network traffic indicator arrows</string>
     <string name="network_traffic_type">Activity type</string>
     <string name="show_network_traffic_combined">Combined (Upload + Download)</string>
+    <string name="show_network_traffic_dynamic">Dynamic</string>
     <string name="show_network_traffic_up">Upload</string>
     <string name="show_network_traffic_down">Download</string>
     <string name="show_network_traffic_all">Both</string>
